# keijiban

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_database.sql
.github/workflows/: main_keijiban.yml
azure/: azuredeploy.bicep  containerApps.bicep  main.bicep  vnet.bicep
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  models.py
backend/app/routers/: posts.py  threads.py
backend/routers/: posts.py  threads.py
backend/tests/: conftest.py  test_health.py  test_threads.py
docs/: backend_design.md  frontend_design.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  types.ts
frontend/app/api/[...path]/: route.ts
frontend/app/components/: header.tsx  postCard.tsx  postInput.tsx  threadCreateInput.tsx  threadSearchInput.tsx  threadSearchResult.tsx
frontend/app/thread/: page.tsx
frontend/app/thread/[thread_id]/: page.tsx
pages/: thread.py
src/: database.py  error.py  main.py  post_check.py  thread.py
